--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -8,6 +8,6 @@
 </head>
 <body>
 <!-- <h1>Kapil</h1> -->
-<a href = 'https://github.com/login/oauth/authorize?client_id=<%=@client_id%>&scope=repo&allow_signup=false'>Take me to github</a>
+<a href = 'https://github.com/login/oauth/authorize?client_id=<%=@client_id%>&scope=repo&allow_signup=false'>Login with github Account</a>
 </body>
 </html>
